<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.episode_detail.EpisodeDetailFragment">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="top"
        android:background="#8F000000"
        android:fontFamily="@font/cherry_swash"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="26sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/sub_tv_style"
            android:text="@string/air_date" />

        <TextView
            android:id="@+id/air_date_tv"
            style="@style/title_tv_style" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal">

        <TextView
            style="@style/sub_tv_style"
            android:text="@string/episode" />

        <TextView
            android:id="@+id/episode_tv"
            style="@style/title_tv_style" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true" />

    <androidx.cardview.widget.CardView
        android:id="@+id/more_characters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/cherry_swash"
            android:gravity="center"
            android:text="@string/characters"
            android:textColor="@color/black_100"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_more_24" />

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/characters_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_characters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </ScrollView>

    </LinearLayout>


</LinearLayout>